# cnap

./: README.md  cnap.py  cnvprofiler.py  node.py  simulations_runner.py
qdist/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DirectedEdge.hpp  InternalNode.hpp  LeafNode.hpp  Makefile  Matrix.hpp  NewickParser.cpp  NewickParser.hpp  Node.hpp  QDist.cpp  QDist.hpp  README  Tree.hpp  TreeUtil.cpp  TreeUtil.hpp  Util.cpp  Util.hpp  cmake_install.cmake  include_blas.hpp  main.cpp  qdist  testMatrix  testMatrix.cpp  testQDist  testQDist.cpp
simulations/: sim1.dist
simulations/10-5-5-0.5-3-2/: r0  r0_phylip_tree.newick  r1  r1_phylip_tree.newick  r1_tree.newick  r2  r2_phylip_tree.newick  r2_tree.newick  r3  r3_phylip_tree.newick  r3_tree.newick  r4  r4_phylip_tree.newick  r4_tree.newick  r5  r5_phylip_tree.newick  r5_tree.newick  r6  r6_phylip_tree.newick  r6_tree.newick  r7  r7_phylip_tree.newick  r7_tree.newick  r8  r8_phylip_tree.newick  r8_tree.newick  r9  r9_phylip_tree.newick  r9_tree.newick
simulations/10-5-5-0.5-3-2/tmp/: infile  screenout  tmp.fa
